fix contrast

--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,42 @@ a {
     color:#474A8A;
 }
 
+.text-secondary {
+    color: #6c747b !important;
+}
+
+.profession {
+    border:2px solid black;
+    border-radius:20px;
+    padding:1px 8px;
+}
+
+.stack {
+    color:#e0ca3e;
+    position: relative;
+}
+
+.stack::after {
+    content: "";
+    background-color: #505050;
+    position: absolute;
+    top:52%; left:50%;
+    width: 100%;
+    height: 60%;
+    padding:4px 4px;
+    box-sizing: content-box;
+    z-index: -1;
+    transform: translate(-50%, -50%);
+    border-radius: 20px;
+    display: block;
+    animation: fadeOut .01s linear .1s forwards alternate;
+}
+
+@keyframes fadeOut {
+    from {opacity:1;}
+    to {opacity:0;}
+  }
+  
 
 .carousel {
     border-radius: 10px;
